--- a/stylesheets/etc/all.css
+++ b/stylesheets/etc/all.css
@@ -2681,18 +2681,43 @@
   content: "";
 }
 
-/* line 5, ../../sass/etc/all.scss */
+/* line 1, ../../sass/etc/flagIcons.scss */
+.pt_BR {
+  background-image: url("../../resources/images/app/flags/br.png") !important;
+}
+
+/* line 5, ../../sass/etc/flagIcons.scss */
+.en {
+  background-image: url("../../resources/images/app/flags/us.png") !important;
+}
+
+/* line 9, ../../sass/etc/flagIcons.scss */
+.es {
+  background-image: url("../../resources/images/app/flags/es.png") !important;
+}
+
+/* line 4, ../../sass/etc/iconColors.scss */
+.tabIcon {
+  color: #0b67c4;
+}
+
+/* line 8, ../../sass/etc/iconColors.scss */
+.buttonIcon {
+  color: #fff;
+}
+
+/* line 7, ../../sass/etc/all.scss */
 body#ext-element-1 {
   background-color: blue;
   box-shadow: inset 0 0 50px black;
   box-sizing: border-box;
 }
-/* line 14, ../../sass/etc/all.scss */
+/* line 16, ../../sass/etc/all.scss */
 body .splashscreen.x-mask {
   background-color: white;
   opacity: 1;
 }
-/* line 18, ../../sass/etc/all.scss */
+/* line 20, ../../sass/etc/all.scss */
 body .splashscreen.x-mask-msg, body .splashscreen.x-mask-msg div {
   font-size: 16px;
   font-weight: bold;
@@ -2701,11 +2726,11 @@ body .splashscreen.x-mask-msg, body .splashscreen.x-mask-msg div {
   background-color: transparent;
   background-position: top center;
 }
-/* line 30, ../../sass/etc/all.scss */
+/* line 32, ../../sass/etc/all.scss */
 body .x-message-box .x-window-body .x-box-inner {
   min-height: 610px !important;
 }
-/* line 33, ../../sass/etc/all.scss */
+/* line 35, ../../sass/etc/all.scss */
 body .x-splash-icon {
   background-image: url("../../resources/images/app/Girls-Blue-Dress-icon.png");
   height: 500px;
@@ -2714,12 +2739,12 @@ body .x-splash-icon {
   margin-left: -300px;
 }
 
-/* line 45, ../../sass/etc/all.scss */
+/* line 47, ../../sass/etc/all.scss */
 .appBanner {
   color: white;
 }
 
-/* line 48, ../../sass/etc/all.scss */
+/* line 50, ../../sass/etc/all.scss */
 .rowgreen {
   background-color: green;
 }
